# wavespectra2dsplitfit

./: AUTHORS.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  fitFromMatlabFile.ipynb  fitFromMatlabFile.py  fittedParms.csv  main.m  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py
data/: ExampleWaveSpectraObservations.mat
docs/source/: conf.py  index.rst
wavespectra2dsplitfit/: S2DFit.ipynb  S2DFit.py  wavespec.py
