[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavespectra2dsplitfit"
version = "0.2"
authors = [
 {name="Jason McConochie", email="j.mcconochie@shell.com"},
]
description = "Ocean wave 2D spectrum partitioning and fitting JONSWAP spectrum"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
   "scipy",
   "pandas",
   "matplotlib",
   "scikit-image",
   "scikit-learn"
]

[project.urls]
"Homepage" = "https://github.com/jmcconochie/wavespectra2dsplitfit"

