[build-system]
#requires = ["hatchling"]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
#build-backend = "hatchling.build"
[tool.setuptools] 
packages = ["wavespectra2dsplitfit"]

[project]
name = "wavespectra2dsplitfit"
version = "0.5.4"
authors = [
 {name="Jason McConochie", email="j.mcconochie@shell.com"},
]
description = "Ocean wave 2D spectrum partitioning and fitting JONSWAP spectrum"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
   "scipy",
   "pandas",
   "matplotlib",
   "scikit-image",
   "scikit-learn"
]

[project.urls]
"Homepage" = "https://github.com/jmcconochie/wavespectra2dsplitfit"

